--- a/templates/note_body.html
+++ b/templates/note_body.html
@@ -7,8 +7,8 @@
         <div class="note-content col-5">
             <div class="note-title">
                 <img src="{{eyecatch}}" alt="">
-                <h1>{{ name }}<br>
-                    <span class="small text-muted">{{publishAt[0:10]}}</span></h1>
+                <h1>{{ name }}</h1>
+                <p class="text-muted">{{publishAt[0:10]}}</p>
             </div>
 
             <div class="note-body">
