--- a/templates/note_body.html
+++ b/templates/note_body.html
@@ -2,9 +2,9 @@
 {% block content %}
 
 <div class="note-conteiner">
-    <h1 class="text-center">Note of PiedPiper</h1>
+
     <div class="row justify-content-center">
-        <div class="note-content col-5">
+        <div class="note-content col-12 col-lg-5">
             <div class="note-title">
                 <img src="{{eyecatch}}" alt="">
                 <h1>{{ name }}</h1>
