--- a/templates/base.html
+++ b/templates/base.html
@@ -37,7 +37,7 @@
             aria-expanded="false" aria-label="ナビゲーションの切替">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div id="Navbar" class="collapse navbar-collapse ml-3">
+        <div id="Navbar" class="collapse navbar-collapse mr-3">
             <ul class="nav nav-pills flex-column ml-auto">
                 {% if index %}
                 <li class="nav-item"><a class="nav-link" href="#top">PiedPiper</a></li>
@@ -67,7 +67,7 @@
         <!-- ここに個別部分が挿入される -->
         {% endblock %}
     </div>
-    <div id="bg-bk">
+    <div id="bg-bk" class="bg-n">
     </div>
     <footer>
         <p class="small">&copy;2020青山学院大学PiedPiperプログラミング愛好会</p>
