--- a/templates/note_body.html
+++ b/templates/note_body.html
@@ -3,7 +3,7 @@
 
 <div class="note-conteiner">
 
-    <div class="row justify-content-center">
+    <div class="row justify-content-center contact-body">
         <div class="note-content col-12 col-lg-5">
             <div class="note-title">
                 <img src="{{eyecatch}}" alt="">
