--- a/templates/index.html
+++ b/templates/index.html
@@ -28,13 +28,19 @@
 <!-- セクション2-ABOUT_PIEDPIPER -->
 <div id="about" class="section_about ">
   <div class="bg-about-img section">
-    <div class="row">
-      <div class="about-conteinar col-12  col-lg-10 offset-lg-2">
+    <div class="row ">
+      <div class="about-conteinar col-12  col-lg-10 offset-lg-1">
         <h1 class="display-1">PiedPiper</h1>
         <div class="about_text">
           <p>青山学院大学プログラミング愛好会です。</p>
           <p>青学生のテクノロジーへの理解を深め</p>
           <p>プログラミングの学習及び開発を行っています。</p>
+        </div>
+        <div class="about_imgs">
+          <div class="about_imgs_span1"><img class="about_img_1" src="/static/images/about_1.png" alt=""><img
+              class="about_img_2" src="/static/images/about_2.png" alt=""></div>
+          <div class="about_imgs_span2"><img class="about_img_3" src="/static/images/about_3.png" alt=""><img
+              class="about_img_4" src="/static/images/about_4.png" alt=""></div>
         </div>
       </div>
     </div>
